syntax = "proto3";

option csharp_namespace = "Dotawin.Server";
package update;

// The greeting service definition.
service Updater {
  rpc SendItemsUpdate(ItemsUpdate) returns (UpdateResult);
  rpc GetLatestPatch(PatchRequest) returns (PatchInfo);
  rpc SendDotabuffStatistics(DotabuffUpdate) returns (UpdateResult);
}

message DotabuffUpdate {
	repeated DotabuffHero heroes = 1;
}

message DotabuffItem {
	string name = 1;
	float winrate = 2;
	int32 matches = 3;
}

message DotabuffHero {
	string name = 1;
	int32 popularity = 2;
	float winrate = 3;
	bool isCarry = 4; 
	repeated DotabuffItem items  = 5;
}

message DotaItem {
	string name          = 1;
	string internalName  = 2;
	uint32 cost          = 3;
	enum ItemType {
    BOOTS = 0;
    CORE = 1;
    NEUTRAL = 2;
    SITUATIONAL = 3;
	}
	ItemType type = 4;
}

message ItemsUpdate {
	string version           = 1;
	repeated DotaItem items  = 2;
}

message PatchRequest {}

message PatchInfo {
	string version = 1;
	string date    = 2;
}

message UpdateResult {
	bool success   = 1;
}

